--- a/github.html
+++ b/github.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="GitHub">
-    <a href="https://github.com/gustavoguanabara" target="_blank">Acesse</a>
+    <img src="imagens/prints-social/tela-github.jpg" alt="GitHub">
+    <a href="https://github.com/labiapari" target="_blank">Acesse</a>
 </body>
 </html>
