--- a/linkedin.html
+++ b/linkedin.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook</title>
+    <title>Linkedin</title>
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/prints-social/tela-facebook.jpg" alt="Facebook">
-    <a href="https://pt-br.facebook.com/felipelabi/" target="_blank">Acesse</a>
+    <img src="imagens/prints-social/tela-linkedin.jpg" alt="Linkedin">
+    <a href="https://br.linkedin.com/in/felipe-bello-labiapari" target="_blank">Acesse</a>
 </body>
 </html>
