--- a/youtube.html
+++ b/youtube.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="YouTube">
-    <a href="https://www.youtube.com/@CursoemVideo/playlists" target="_blank">Acesse</a>
+    <img src="imagens/prints-social/tela-youtube.jpg" alt="YouTube">
+    <a href="https://www.youtube.com/@fbello89" target="_blank">Acesse</a>
 </body>
 </html>
